--- a/09.PILAS.md
+++ b/09.PILAS.md
@@ -83,3 +83,98 @@ Salida:
 
     Pila: [Perro, Caballo, Gato]
     ¿La pila está vacía? false
+
+
+
+
+## Ejemplos de Pilas
+
+    import java.util.Stack;
+    public class Camisas{
+        public static void main(String[] args){
+        Stack <String> camisas= new Stack<>();
+        //camisas.push("Camisa Rosa");
+        //camisas.push("Camisa Verde");
+        //camisas.push("Camisa Azul");
+        String elemento=camisas.peek();
+        System.out.println("La última camisa agregada es:" + elemento);
+        boolean resultado=camisas.empty();
+        if(resultado!=false){
+            System.out.println(elemento);
+        }
+        // while(resultado!=false){
+        //     System.out.println(elemento);
+        // }
+        }
+    }
+
+
+   ## Ejemplo de Colecciones que contiene colas, pilas ...
+
+       import java.util.LinkedList;
+    import java.util.Stack;
+    import java.util.Queue;
+    import java.util.Scanner;
+    public class Colecciones{
+        public static void main(String [] args){
+        // Generamos el Array de tipo LinkedList 
+        // LinkedList <String> usuario= new LinkedList<>();
+        // usuario.add("Juan");
+        // usuario.add("Pedro");
+        // usuario.add("Carlos");
+        // System.out.println("El elemento en el indice 1 es: " + usuario.get(1));
+        // usuario.set(1,"Lupe"); // a usuario modifica el que este en 1 por "lupe"
+        // System.out.println("El elemento en el indice 1 es: " + usuario.get(1));
+        // usuario.remove(1);
+        // System.out.println("El elemento en el indice 1 es: " + usuario.get(1));
+    
+    
+        ////// P I L A S  (Stack)
+        //instanciamos la clase
+        Stack <String> pila= new Stack<>(); // Clase creada por Java
+        pila.push("Luis");
+        pila.push("Pablo");
+        pila.push("Mario");
+        System.out.println("Los elementos de la pila son:" + pila);
+        pila.pop();
+        System.out.println("Los elementos de la pila son:" + pila);
+        System.out.println("Los elementos de la pila son:" + pila.peek());
+        System.out.println("La posicion de Luis es: " + pila.search("Luis"));
+        System.out.println("La pila esta vacia? : " + pila.empty());
+    
+        ///////// C O L A S (Queue)
+        // Queue <String> cola= new LinkedList<>();
+        // cola.offer("Andrea");
+        // cola.offer("Maria");
+        // cola.offer("Laura");
+        // System.out.println("Los elementos de la cola son:" + cola);
+        // System.out.println("El primero en llegar a la cola es :" + cola.element());
+        // cola.poll(); // Elimina el primero que entro 
+        // System.out.println("El primero en llegar a la cola es :" + cola.element());
+        
+        // /////////////////////  M E T O D O S   D E   C A D E N A //////
+        // String nombre;
+        // String folio;
+        // String curp;
+        // String edad;
+        // Scanner sc=new Scanner(System.in); 
+        // System.out.println("Ingresa el nombre del usuario");
+        // nombre=sc.nextLine();
+        // nombre=nombre.toLowerCase();
+        // System.out.println("Ingresa el folio del usuario");
+        // folio=sc.nextLine();
+        // folio=folio.toUpperCase();
+        // System.out.println("Ingresa el CURP del usuario");
+        // curp=sc.nextLine();
+        // curp=curp.toUpperCase();
+        // if(curp.length()!=18){ // método length cuenta el num. de caracteres
+        //     System.out.println("Longitud del CURP incorrecta");
+        // }
+        // System.out.println("Ingresa la edad del usuario");
+        // edad=sc.nextLine();
+        // // convertir un dato de cadena a entero creando una nueva variable.
+        // int edad2=Integer.parseInt(edad);
+        // System.out.println("La edad más 2 es: " + (edad2 + 2));
+        }
+    }
+
